--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,14 +3,17 @@ init:
 
 install:
     - ps: |
-        # Here we nstall platyPS to the worker machine form the gallery
+        # Here we install platyPS to the worker machine form the gallery
         # Install-PackageProvider -Name NuGet -MinimumVersion 2.8.5.201 -Force
         # Install-Module platyPS -Force
         # Import-Module platyPS
+        Import-Module Pester -MinimumVersion 4.0.0
+
 build_script:
     - ps: |
         # TODO: create external help in en-US folder
         # New-ExternalHelp -OutputPath en-US -Path ./docs
+
 test_script:
     - ps: |
         # TODO: load the Greet module and write a script
