--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,21 +2,23 @@ init:
 - git config --global core.autocrlf true
 
 install:
+ - cinst pester
     - ps: |
         # Here we install platyPS to the worker machine form the gallery
-        Install-PackageProvider -Name NuGet -MinimumVersion 2.8.5.201 -Force
+        # Install-PackageProvider -Name NuGet -MinimumVersion 2.8.5.201 -Force
         # Install-Module platyPS -Force
         # Import-Module platyPS
-        Install-Module Pester -RequiredVersion 4.0.0 -Scope CurrentUser
-        Import-Module Pester -MinimumVersion 4.0.0
+        # Install-Module Pester -RequiredVersion 4.0.0 -Scope CurrentUser
+        # Import-Module Pester -MinimumVersion 4.0.0
 
-build_script:
-    - ps: |
+
+build_script: false
+#    - ps: |
         # TODO: create external help in en-US folder
         # New-ExternalHelp -OutputPath en-US -Path ./docs
 
 test_script:
-    - ps: |
+    - ps: Invoke-Pester
         # TODO: load the Greet module and write a script
         # that will throw if docs are not up-to-date with the code.
         # In other words, if Update-MarkdownHelp changes the markdown.
@@ -24,5 +26,5 @@ test_script:
         # Update-MarkdownHelp -Path .\docs\
         # $diff = git diff
         # if ($diff) {throw "Docs not up-to-date: $diff"}
-        Invoke-Pester
+
 
