--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
-# init:
-# - git config --global core.autocrlf true
+init:
+  - git config --global core.autocrlf true
 
 install:
   - cinst pester
