--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,8 +10,9 @@ install:
 
 build: false
 
+# Invoke Pester to run all of the unit tests, then save the results into XML in order to populate the AppVeyor tests section
+# If any of the tests fail, consider the pipeline failed
 test_script:
-- ps: Invoke-Pester
-
-deploy:
-- ps: Publish-Module -Path . -NuGetApiKey $Env:MyPSGalleryAPIKey -Repository PSGallery
+  - ps: $res = Invoke-Pester -Path ".\Tests" -OutputFormat NUnitXml -OutputFile .\Tests\TestsResults.xml -PassThru
+  - ps: (New-Object 'System.Net.WebClient').UploadFile("https://ci.appveyor.com/api/testresults/nunit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\TestsResults.xml))
+  - ps: if ($res.FailedCount -gt 0) { throw "$($res.FailedCount) tests failed."}
