--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,7 @@ environment:
 
 install:
   - cinst pester
-  - appveyor DownloadFile https://www.nuget.org/NuGet.exe
+  # - appveyor DownloadFile https://www.nuget.org/NuGet.exe
   # Nuget v.3 forces normalized versioned package name
 
 build: false
