choco install nuget 3.5

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -13,6 +13,7 @@ environment:
 
 install:
   - cinst pester
+  - cinst nuget.commandline --version 3.5.0 --force
   # - appveyor DownloadFile https://www.nuget.org/NuGet.exe
   # Nuget v.3 forces normalized versioned package name
 
