testing appveyor ubuntu  image

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,7 @@ environment:
     secure: kIYsNnhXS69KNHOKGmz+GQn5pfwnTer90p7YUk3sKmkvFEwIpvxDjDAFFBu30EJ4
   matrix:
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+  - APPVEYOR_BUILD_WORKER_IMAGE: Ubuntu
 
 install:
   - cinst pester
